--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,13 @@
     <header>
         <a href="/">
         {% block logo %}
-        TeraBlog
+        <span class="tb-logo">
+            <span class="logo">
+                <span class="l">T</span>
+                <span class="r">B</span>
+            </span>
+            <b>TeraBlog</b>
+        </span>
         {% endblock logo %}
         </a> 
         <label for="nav"><i class="fas fa-bars"></i></label>
